# temp-monitor

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp  parser.cpp  parser.h  types.h
